# ASO_ANGENTIC_AI

./: .env  Dockerfile  Dockerfile.agent  Dockerfile.mcp  Jurnalul de faza 1 ASO.docx  docker-compose.yml  fastmcp_inspect.py  jurnal faza 2.txt  pyproject.toml  readme.md  requirements.txt  sig_runner.py
basic_agent/: .env  README.md  __init__.py  agent.py  mcp_file.py  mcp_server.py  requirements.txt  test_mcp_output.py
docker/: Dockerfile.agent  Dockerfile.mcp  Dockerfile.ollama  start_ollama.sh
