[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "basic_agent"
version = "0.1.0"
description = "Basic ADK Agent"
dependencies = [
    "google-adk",
    "fastmcp",
    "litellm",
    "mcp"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["basic_agent*"]
